# JsonManager

./: .gitignore  README.md  pyproject.toml  setup.py
json-manager/: json_attributdict.py  json_setup.py
json_manager/: json_attributdict.py  json_setup.py
tests/: test.json  test.py  test2.json
